--- a/src/app/task-section/dialog-add-task/dialog-add-task.component.scss
+++ b/src/app/task-section/dialog-add-task/dialog-add-task.component.scss
@@ -349,3 +349,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
 .mat-spinner circle {
     stroke: var(--header);
 }
+
+.disabled {
+    pointer-events: none;
+}
