--- a/src/app/data-protection/data-protection.component.scss
+++ b/src/app/data-protection/data-protection.component.scss
@@ -1,5 +1,5 @@
 .bg-container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     max-width: 100%;
     position: absolute;
@@ -10,4 +10,20 @@
     align-items: center;
     z-index: 2;
     background-image: url('/../assets/img/bg1.jpg');
+}
+
+.data-box {
+    width: 75vw;
+    height: 75vh;
+    max-height: 75vh;
+    overflow-y: auto;
+}
+
+.home-icon {
+    color: var(--header);
+    position: absolute;
+    top: 32px;
+    left: 32px;
+    font-size: 36px;
+    cursor: pointer;
 }
