--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,5 +1,21 @@
 <div class="bg-container">
-    <p>imprint works!</p>
+    <div>
+        <h1>Impressum</h1>
+        <br>
+        <br>
+        <p>Anastasiia Ünal<br />
+            Schützenstraße 62<br />
+            40723 Hilden</p>
+        <br>
+        <br>
+        <h4><b> Kontakt: </b></h4>
+        <p>Telefon: 0175773617537<br />
+            E-Mail: velika908@gmail.com</p>
+        <br>
+        <br>
+        <br>
+        Use icons from <a href="https://icons8.de/icons" target="_blank">icons8.de</a>
+    </div>
 
-    <mat-icon routerLink="/login">home</mat-icon>
+    <mat-icon class="home-icon" routerLink="/login">home</mat-icon>
 </div>
