--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -11,3 +11,12 @@
     z-index: 2;
     background-image: url('/../assets/img/bg1.jpg');
 }
+
+.home-icon {
+    color: var(--header);
+    position: absolute;
+    top: 32px;
+    left: 32px;
+    font-size: 36px;
+    cursor: pointer;
+}
