fix calendar style

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -25,6 +25,10 @@
   background-color: #fff;
   border-radius: 16px;
   margin-top: 62px;
+
+  @media (max-height: 720px)  {
+    margin-top: 46px;
+  }
 }
 
 .calendar-table thead th {
